# MarketPipe

./: .cleanup_notes.md  .coveragerc  .env.example  .gitignore  .pip_freeze_snapshot.txt  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .python-version-local  =1.7.0  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CLI_COMMANDS_REFERENCE.md  CLI_VALIDATION_FRAMEWORK.md  CONTRIBUTING.md  DDD_REFACTOR.md  LICENSE  Makefile  PLAN.md  README.md  RELEASE.md  REPOSITORY_CLEANUP_RECOMMENDATIONS.md  SECURITY.md  TEST_REFACTORING_PLAN.md  TODO-2.md  TODO.md  alembic.ini  bandit-report.json  benchmark-20250720_113727.json  benchmark-baseline.json  ci-recommendations.md  cleanup_test_artifacts.py  config.yaml  contributing.md  debug_cli.py  debug_direct_test.py  debug_help_test.py  debug_symbols_test.py  debug_test_comparison.py  (+19 more)
.githooks/: pre-commit
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cli-validation.yml  ddd-validation.yml  release.yml  security.yml  update-roadmap.yml
.workspace/: README.md  setup.py  test
.workspace/alembic/: env.py
.workspace/dev-tools/: cleanup-root.sh  final-cleanup.sh  mapping_validator.py  organize-docs.sh  run_full_pipeline.py  run_pipeline_fixed.py  setup_test_hooks.sh  test_change_detector.py
.workspace/test-runner/: README.md  smart_test.py  test_smart_test.py
.workspace/testing/: intelligent_system.py
.workspace/tools/: clear_job_conflicts.py  date_calculator.py  generate_api_reference.py  smoketest.sh  validation_report.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_optimize_metrics_index.py  0003_add_missing_ohlcv_columns.py  0003_add_provider_feed_labels.py  0004_add_provider_feed_labels.py  0005_add_ingestion_jobs_table.py
backlogs/master_list/: PRD.md  backlog.md
config/: example_config.yaml  example_finnhub_config.yaml  example_polygon_config.yaml  example_with_metrics.yaml  finnhub_live_test.yaml  fixed_config.yaml
data/: README.md  ingestion_jobs.db  metrics.db
data/db/: core.db  core.db-shm  core.db-wal
dev/: README.md  usercustomize.py
docker/: README.md
docker/monitoring/: prometheus.yml
docs/: CLI_COMMANDS_REFERENCE.md  COMPREHENSIVE_PIPELINE_VALIDATOR.md  COVERAGE_FIX_SUMMARY.md  ENVIRONMENT_VARIABLES.md  ENV_VARIABLES_QUICK_REFERENCE.md  GETTING_STARTED.md  MONITORING.md  PIPELINE_VALIDATOR_GUIDE.md  POSTGRESQL_SETUP.md  README.md  README_TRANSFORMATION.md  ROADMAP_AUTOMATION.md  TODO-2.md  TRANSFORMATION_SUMMARY.md  api_client_design.md  config_versioning.md  connectors.md  core.md  ddd_maintenance_strategy.md  domain.md  domain_model_diagram.md  getting_started.md  grafana_dashboard.json  infrastructure.md  ingestion.md  mkdocs.yml  pipeline.md  pre-commit.md  provider_env_map.yaml  prune_commands.md  release_notes.md  security.md
docs/developer_guide/: architecture.md  contributing.md  testing.md
docs/development/: TODO.md  dev-README.md  migration-guide.md  test_suite_audit_plan.md
docs/operations/: ENVIRONMENT_VARIABLES.md  MONITORING.md
docs/testing/: E2E_TEST_GAP_ANALYSIS.md
docs/user_guide/: cli_usage.md  configuration.md  monitoring.md  troubleshooting.md
examples/: alpaca_debug_comprehensive.py  alpaca_demo_async.py  alpaca_demo_sync.py  alpaca_iex_test.py  alpaca_simple_test.py  ingest_one_day.py  run_with_metrics.py
examples/config/: ingestion_example.yaml
grafana/: marketpipe_dashboard.json
marketpipe/: __init__.py
monitoring/: README.md
monitoring/grafana/: marketpipe_dashboard.json
reports/: coverage_final.xml  coverage_initial.xml  failure_matrix.md
schema/: schema_v1.json
scripts/: README.md  TSLA_PIPELINE_README.md  alpha-release-check.sh  benchmark.sh  bootstrap-pipeline  calculate_dates.py  check_env_placeholders.py  clean  cleanup-root.sh  cleanup_db_files.py  clear_all_job_conflicts.py  clear_job_conflicts.py  complete_working_pipeline.py  comprehensive_data_pipeline.py  comprehensive_pipeline_validator.py  create_csv_validation_report.py  debug_active_jobs.py  debug_aggregation.py  debug_direct_test.py  debug_help_test.py  debug_issues.py  debug_symbols_test.py  debug_test_comparison.py  debug_validation_aggregation.py  demo  demo.sh  fix_aggregation.py  fix_intraday_aggregation.py  fix_pipeline_issues.py  fix_validation_aggregation.py  format  health-check  health-check.sh  inspect_data.py  manual_validation_report.py  phase3_validation.py  pipeline_status_summary.py  pipeline_validator.py  populate_aggregation.py  pre-commit-roadmap-check.sh  (+29 more)
scripts/ddd-validation/: check_context_isolation.sh  check_ubiquitous_language.sh  generate_rules.py  sync_domain_models.py  validate_ddd_rules.py
src/marketpipe/: __init__.py  __main__.py  aggregation.py  bootstrap.py  cli.py  cli_old.py  events.py  ingestion.py  legacy_bootstrap.py  loader.py  main.py  metrics.py  metrics_event_handlers.py  metrics_server.py  validation.py
test_venv/: pyvenv.cfg
tests/: PHASE4_TEST_ARCHITECTURE.md  base.py  conftest.py  test_alpaca_client.py  test_alpaca_client_refactored.py  test_base_client.py  test_bootstrap_side_effect.py  test_cli.py  test_cli_rename.py  test_coordinator_flow.py  test_finnhub_adapter.py  test_finnhub_improvements.py  test_finnhub_provider.py  test_loader.py  test_mask.py  test_metrics.py  test_migrations.py  test_polygon_adapter.py  test_postgres_migrations.py  test_provider_loader.py  test_provider_registry.py  test_prune_commands.py  test_rate_limiter.py  test_rate_limiter_load.py  test_repository_factory_fixes.py  test_secrets_masking_integration.py
tests/benchmarks/: test_performance_benchmarks.py
tests/cli/: __init__.py  test_deprecated_alias.py  test_help_no_side_effects.py  test_new_command_paths.py  test_symbols_cli.py  test_symbols_execute.py  test_symbols_modes.py
tests/config/: test_versioning.py
tools/: README.md  clear_all_job_conflicts.py  clear_job_conflicts.py  date_calculator.py  postgres.env  setup_postgres.sh  smoketest_minimal.sh  validation_report.py
validation_output/: validation_report_20250720_161427.json
(+339 files in other folders)
